# jot

./: .gitignore  README.md  pyproject.toml
src/jot/: __init__.py
